--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body {
-    background-color: black;
+    overflow: hidden;
+    background-color: rgb(100, 100, 100);
     text-align: center;
 }
 h3 {
-    color: white;
+    color: rgb(53, 53, 53);
     font-family: Arial, Helvetica, sans-serif;
 }
 #myCanvas {
-    background-color: rgb(61, 61, 61);
+    background-color: rgb(197, 197, 197);
 }
 #measurments {
     float: right;
